Use List.getFirst/getLast in the formatter's list helpers